--- a/app/views/datasource-map.html
+++ b/app/views/datasource-map.html
@@ -20,5 +20,6 @@
     center="osloCenter"
     legend="legend"
     defaults="defaults"
+    layers="layers"
     style="width: 100%; height: 100%;"></leaflet>
 </div>
