--- a/app/views/datasource-record-form.html
+++ b/app/views/datasource-record-form.html
@@ -17,5 +17,5 @@
   <md-content layout="column" style="height: calc(100% - 56px);" class="md-padding">
     <form sf-schema="schema" sf-form="form" sf-model="record.value"></form>
   </md-content>
-  <pre>{{record | json}}</pre>
+  <!--<pre>{{record | json}}</pre>-->
 </div>
